--- a/style/style_Header.css
+++ b/style/style_Header.css
@@ -1,17 +1,22 @@
+
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 header {
     background-color: #D5CABC;
-    position: fixed;
+    position: relative; /* Ou supprime cette ligne pour le laisser en flux normal */
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Espace entre l'image et le menu */
+    justify-content: space-between;
     width: 100%;
     height: auto;
     top: 0px;
     left: 0px;
-    padding: 10px; /* Un peu de padding pour un espacement cohérent */
+    padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 header img {
     margin-left: 20px; /* Pas de marge supplémentaire */
     width: 9%;
