--- a/style/style_main.css
+++ b/style/style_main.css
@@ -1,3 +1,17 @@
+body
+{
+    background-color: whitesmoke;
+}
+
+.Reference
+{
+    text-decoration: none;
+    color: black;
+    font-size: 11px;
+    font-style: italic;
+}
+
+
 main
 {
     margin: 20px;
