--- a/style/style_Header.css
+++ b/style/style_Header.css
@@ -2,6 +2,10 @@
 html, body {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 header {
@@ -64,7 +68,7 @@ nav ul li::after
 }
 
 nav ul li a {
-    color: #2F4558;
+    color: #21313f;
     text-decoration: none;
     font-size: 20px;
     font-weight: 600;
