--- a/style/style_Header.css
+++ b/style/style_Header.css
@@ -119,3 +119,42 @@ nav ul li ul li a:hover {
     background-color: #b8aa9d;
     color: #000;
 }
+
+/*================================ VERSION TELEPHONE ================================*/
+
+/* Media query pour téléphone */
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    header img {
+        margin: 0 auto;
+        width: 50%; /* Ajuste la taille du logo pour les petits écrans */
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: center; /* Centre les éléments dans la nav bar */
+        margin-right: 0;
+        width: 100%;
+    }
+
+    nav ul li {
+        margin-right: 0;
+        width: 100%;
+        justify-content: center;
+        text-align: center; /* Centre les textes des éléments */
+    }
+
+    nav ul li a {
+        text-align: center;
+        padding: 15px;
+        width: 100%;
+    }
+
+    nav ul li::after {
+        display: none;
+    }
+}
